Ensure scan buttons are visible on tiny screens
Slightly decrease width of buttons overlaying scan to ensure all are visible on screens 320px wide.

--- a/app/Resources/scss/sections/_viewer.scss
+++ b/app/Resources/scss/sections/_viewer.scss
@@ -82,10 +82,6 @@
         z-index: 1;
     }
 
-    .viewer_control-group.-vertical label + & {
-        @include separator(0, 0, 1);
-    }
-
     &[type=text] {
         color: $text-color !important;
         text-align: left;
@@ -162,6 +158,16 @@
 
     &.-search {
         @include icon(search, false);
+    }
+
+    .viewer_control-group.-vertical label + & {
+        @include separator(0, 0, 1);
+    }
+
+    .viewer_controls.-overlay & {
+        @include respond-to(micro) {
+            min-width: ($grid * 1.3);
+        }
     }
 }
 
