--- a/app/Resources/scss/util/_settings.scss
+++ b/app/Resources/scss/util/_settings.scss
@@ -7,7 +7,8 @@ $breakpoints: (
     large: 1023px,
     medium: 719px,
     small: 639px,
-    tiny: 479px
+    tiny: 479px,
+    micro: 379px,
 );
 
 $border-width: 1px;
